Remove unused annotation